# gradwork-backend

./: .dockerignore  Cargo.toml  Dockerfile  INTEGRATION_AGENT.md  README.md  docker-compose.dev.yaml  docker-compose.yaml
frontend/: index.html
migration/: Cargo.toml
migration/src/: lib.rs  m20250206_000001_create_users_table.rs  m20250206_000002_create_gigs_table.rs  m20250206_000003_create_contracts_table.rs  m20250206_000004_create_portfolios_table.rs  m20250207_000005_alter_users_for_supabase_auth.rs  m20250208_000001_add_user_id_to_gigs.rs  m20250210_000001_add_unique_gig_user_to_contracts.rs  m20250210_000002_create_messages_table.rs  m20250212_000003_add_thumbnail_url_to_gigs.rs  m20250214_000001_add_indexes.rs  m20250216_000001_add_thumbnail_url_to_portfolios.rs  m20250216_000002_add_message_perf_indexes.rs  m20250226_000001_add_category_to_gigs.rs
src/: lib.rs  main.rs
src/auth/: authorization.rs  jwks.rs  jwt.rs  middleware.rs  mod.rs
src/cache/: mod.rs
src/chat/: protocol.rs  server.rs  session.rs
src/db/: contracts.rs  gigs.rs  messages.rs  mod.rs  portfolio.rs  users.rs
src/handlers/: auth.rs  chat.rs  contracts.rs  gigs.rs  mod.rs  portfolio.rs  users.rs
src/models/: contracts.rs  gigs.rs  messages.rs  mod.rs  portfolio.rs  users.rs
tests/: auth_test.rs
